tests/vendor/valid/simple/unused_label.c
//expect 0
//tags: simple, goto
int main() {
unused:
    return 0;
}