tests/vendor/invalid/syntax/kw_label.c
//tags: simple, goto
int main() {
    return: return 0;
}